added statuses "waiting for manager(admin)/client response". so now its working via messages.
